--- a/css/forms.css
+++ b/css/forms.css
@@ -1,33 +1,34 @@
 input[type=text],
+input[type=email],
 input[type=password],
 select,
 textarea {
-	background-color: #fff;
-	font: inherit;
-	color: #666;
-	border: 0;
-	padding: 4px;
-	line-height: normal;
-	margin: 0;
-	outline: none;
+background-color: #fff;
+font: inherit;
+color: #666;
+border: 0;
+margin: 0;
+padding: 6px;
+line-height: normal;
+outline: none;
+-webkit-appearance: none;
 }
-input[type=submit],
-input[type=button] {
-	cursor: pointer;
-	border: 0;
-	font: inherit;
+input[type=submit] {
+cursor: pointer;
+border: 0;
+font: inherit;
 }
 textarea {
-	resize: none;
+resize: none;
 }
 input[type=submit]::-moz-focus-inner {
-	border: 0;
+border: 0;
 }
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
-    color: #aaa;
+color: #aaa;
 }
 input:-moz-placeholder,
 textarea:-moz-placeholder {
-    color: #aaa;
+color: #aaa;
 }
