--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,11 @@
 
 /* GLOBALS */
 
+* {
+-moz-box-sizing: border-box;
+-webkit-box-sizing: border-box;
+box-sizing: border-box;
+}
 html {
 height: 100%;
 }
