--- a/css/main.css
+++ b/css/main.css
@@ -1,61 +1,8 @@
-/* EXTERNAL */
-
 @import url(reset.css);
+@import url(global.css);
 @import url(forms.css);
 @import url(layout.css);
 
-/* GLOBALS */
-
-* {
--moz-box-sizing: border-box;
--webkit-box-sizing: border-box;
-box-sizing: border-box;
-}
-html,
-body {
-height: 100%;
-}
-body {
-background: #fff;
-text-align: center;
-font: 100%/130% sans-serif;
-color: #555;
-}
-a {
-color: #0ff;
-text-decoration: none;
-}
-a:hover {
-text-decoration: none;
-}
-i {
-display: inline-block;
-}
-
-/* UTILITY CLASSES */
-
-.btn {
-display: inline-block;
-position: relative;
-}
-.left {
-float: left;
-}
-.right {
-float: right;
-}
-.block {
-display: block;
-}
-.hidden {
-display: none;
-visibility: hidden;
-}
-.text-center {
-text-align: center;
-}
-.text-right {
-text-align: right;
-}
-
-/* UI ELEMENTS */
+/*
+cat reset.css global.css forms.css layout.css | cleancss -o merged.css
+*/
