--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,8 @@
 @import url(forms.css);
 @import url(layout.css);
 
+/*@import url(merged.css);*/
+
 /*
 cat reset.css global.css forms.css layout.css | cleancss -o merged.css
 */
