--- a/css/forms.css
+++ b/css/forms.css
@@ -3,31 +3,43 @@ input[type=email],
 input[type=password],
 select,
 textarea {
-background-color: #fff;
-font: inherit;
-color: #666;
-border: 0;
-margin: 0;
-padding: 6px;
-line-height: normal;
-outline: none;
+  background-color: #fff;
+  font: inherit;
+  color: #666;
+  border: 1px solid #aaa;
+  margin: 0;
+  padding: 6px;
+  line-height: normal;
+  outline: none;
 }
+input[type=text]:focus,
+input[type=email]:focus,
+input[type=password]:focus,
+select:focus,
+textarea:focus {
+  border-color: #666;
+}
+
 textarea {
-resize: none;
+  resize: none;
 }
+
 input[type=submit] {
-cursor: pointer;
-border: 0;
-font: inherit;
+  cursor: pointer;
+  border: 0;
+  font: inherit;
 }
+
 input[type=submit]::-moz-focus-inner {
-border: 0;
+  border: 0;
 }
+
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
-color: #aaa;
+  color: #aaa;
 }
+
 input:-moz-placeholder,
 textarea:-moz-placeholder {
-color: #aaa;
+  color: #aaa;
 }
